[tool.poetry]
name = "neural-fonts"
version = "1.2.0"
description = "Hangul Font Creation based on GAN"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
Pillow = "^9.1.1"
numpy = "^1.22.4"
scipy = "^1.8.1"
tensorflow = "^2.9.1"
imageio = "^2.19.3"
scikit-image = "^0.19.3"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
infer = "neural_fonts.infer:main"
train = "neural_fonts.train:main"
package = "neural_fonts.package:main"
crop = "neural_fonts.crop:main"
font2img = "neural_fonts.font2img:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
